Fix cramped display

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -24,7 +24,7 @@ header {
     align-items: center;
     max-width: 1632px;
     margin-inline: auto;
-    padding: 3vh 0;
+    padding-top: 3vh;
 
     h1 {
         font-size: 64px;
